fix for the scrollbar glitch

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -32,7 +32,7 @@ pre {
 	position: relative;
 	z-index: 1;
 	background-color: white;
-	width: 100vw;
+	width: 100%;
 	min-height: 100vh;
 	transition: transform 0.4s;
 }
